--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@ body {
 	<p>
 	<center><IMG SRC= "IMG_3102.jpg" width=260></center>
 	</p>
-	<center><A HREF="file:///Users/AlexRyan/Documents/index3.html"> About Me </A></center>
+	<center><A HREF="index3.html"> About Me </A></center>
 	
-	<center><A HREF="file:///Users/AlexRyan/Documents/index2.html"> Photo Gallery </A></center>
+	<center><A HREF="index2.html"> Photo Gallery </A></center>
 	
-	<center><A HREF="file:///Users/AlexRyan/Documents/index4.html"> My Music </A></center>
+	<center><A HREF="index4.html"> My Music </A></center>
 
-<center><A HREF="file:///Users/AlexRyan/Documents/index5.html"> Food Blog </A></center>
+<center><A HREF="index5.html"> Food Blog </A></center>
 
 
 
