--- a/index3.html
+++ b/index3.html
@@ -9,6 +9,12 @@ body {
 <title>About Me</title>
 
 </head>
+<center><A HREF="index1.html"> Home </A></center>
+		<center><A HREF="index2.html"> Photo Gallery </A></center>
+	
+	<center><A HREF="index4.html"> My Music </A></center>
+
+<center><A HREF="index5.html"> Food Blog </A></center>
 <center><h1>About Me</h1></center> 
 <center><p>I was born on December 5th, 1998 in Good Samaritan Hospital which is only 10 minutes away from the house i've lived
 in my entire life</p><center>
