--- a/index4.html
+++ b/index4.html
@@ -6,7 +6,11 @@
 body {
     background-color: grey;
 }</style>
-
+	<center><A HREF="index1.html"> Home </A></center>
+		<center><A HREF="index3.html"> About Me </A></center>
+	<center><A HREF="index2.html"> Photo Gallery </A></center>
+	
+<center><A HREF="index5.html"> Food Blog </A></center>
 <title>My Music</title>
 
 </head>
