--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,12 @@ body {
 <title>Photo Gallery</title>
 
 </head>
+<center><A HREF="index1.html"> Home </A></center>
+		<center><A HREF="index3.html"> About Me </A></center>
+	
+	<center><A HREF="index4.html"> My Music </A></center>
+
+<center><A HREF="index5.html"> Food Blog </A></center>
 <center><h1>My Photo Gallery</h1></center> 
 <center><table>
 
