--- a/index5.html
+++ b/index5.html
@@ -8,6 +8,14 @@ body {
 <font face="Apple Chancery">
 <title>Food Blog</title>
 
+<center><A HREF="index1.html"> Home </A></center>
+	<center><A HREF="index3.html"> About Me </A></center>
+	
+	<center><A HREF="index2.html"> Photo Gallery </A></center>
+	
+	<center><A HREF="index4.html"> My Music </A></center>
+
+
 </head>
 <center><h1>My Favorite Foods</h1></center>
 <center><h2>Italian Food</h2></center>
