--- a/index5.html
+++ b/index5.html
@@ -35,7 +35,7 @@ sesame chicken and lo mein</p></center>
 <center><p>The Saloon(Pearl River,NY)</p></center>
 <center><p>Chilis</p></center>
 <center><p>Zin Burger</p></center>
-<center><p>Daveys Locker(Montvale,NJ</p></center>
+<center><p>Daveys Locker(Montvale,NJ)</p></center>
 <center><p>Longhorn Steakhouse</p></center>
 <center><p>Zimis(Nanuet,NY)</p></center>
 <center><p>Pancakes Plus(Nanuet,NY)</p></center>
