--- a/index5.html
+++ b/index5.html
@@ -8,7 +8,7 @@ body {
 <font face="Apple Chancery">
 <title>Food Blog</title>
 
-<center><A HREF="index1.html"> Home </A></center>
+<center><A HREF="index.html"> Home </A></center>
 	<center><A HREF="index3.html"> About Me </A></center>
 	
 	<center><A HREF="index2.html"> Photo Gallery </A></center>
