--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@ body {
 <title>Photo Gallery</title>
 
 </head>
-<center><A HREF="index1.html"> Home </A></center>
+<center><A HREF="index.html"> Home </A></center>
 		<center><A HREF="index3.html"> About Me </A></center>
 	
 	<center><A HREF="index4.html"> My Music </A></center>
