--- a/index4.html
+++ b/index4.html
@@ -6,7 +6,7 @@
 body {
     background-color: grey;
 }</style>
-	<center><A HREF="index1.html"> Home </A></center>
+	<center><A HREF="index.html"> Home </A></center>
 		<center><A HREF="index3.html"> About Me </A></center>
 	<center><A HREF="index2.html"> Photo Gallery </A></center>
 	
