--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,7 @@ body {
 <title>About Me</title>
 
 </head>
-<center><A HREF="index1.html"> Home </A></center>
+<center><A HREF="index.html"> Home </A></center>
 		<center><A HREF="index2.html"> Photo Gallery </A></center>
 	
 	<center><A HREF="index4.html"> My Music </A></center>
